--- a/Phi3.csproj
+++ b/Phi3.csproj
@@ -10,8 +10,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.20.1" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime.Extensions" Version="0.13.0" />
-    <PackageReference Include="Microsoft.ML.OnnxRuntimeGenAI" Version="0.5.2" />
+    <PackageReference Include="Microsoft.ML.OnnxRuntimeGenAI" Version="0.4.0" />
     <PackageReference Include="Microsoft.ML.OnnxRuntimeGenAI.Cuda" Version="0.4.0" />
+    <PackageReference Include="NumSharp" Version="0.30.0" />
     <PackageReference Include="OnnxStack.Core" Version="0.39.0" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
